# NumTracer

./: CLAUDE.md  README.md
Tutorials/: CMakeLists.txt
Tutorials/01-color-contraction/: colour_factors.cpp
Tutorials/02-dirac-traces/: trace_raw.cpp  trace_tokens.cpp
Tutorials/03-lorentz-networks/: lorentz_networks.cpp
Tutorials/04-full-diagram/: full_diagram.cpp
Tutorials/05-generating-kernels/: README.md
example/ZA-bench/: CMakeLists.txt  FINDINGS.md  README.md  gen_form_za.sh  gen_nt_za.sh  run_bench.sh
example/ZA-bench/bench/: compare_za_full.cpp  za_bench_shim.hpp
example/ZA-bench/bench/shiminc/DiFfRG/physics/: interpolation.hh  physics.hh
numtracer/: .clang-format  .clangd  .gitignore  CMakeLists.txt  PERFORMANCE.md
numtracer/bench/: gen.sh
numtracer/cmake/: NumTracerConfig.cmake.in  NumTracerPaths.m.in  get_wolfram_app_dir.m
numtracer/documentation/: .gitignore  Doxyfile.in  DoxygenLayout.xml  build.sh  conf.py  fix_doxygen_css.py  header.html  index.md  requirements.txt
numtracer/documentation/_static/: doxygen-darkmode.css
numtracer/documentation/getting_started/: concepts.md  index.md  installation.md  overview.md
numtracer/documentation/internals/: codegen.md  cse-and-lowering.md  expression-algebra.md  index.md  numeric-engine.md  sectors.md  worked-example.md
numtracer/documentation/tutorials/: color-contraction.md  dirac-traces.md  dressed-flavour.md  finite-temperature.md  full-diagram.md  generating-kernels.md  index.md  lorentz-networks.md
numtracer/flows/ZA/: ZA.hh  kernel.hh  sources.m
numtracer/flows/ZA/src/: CT_get.cc  CT_map_1.cc  constructor.cc
numtracer/include/numtracer/codegen/: gen.hpp  lower.hpp  runtime.hpp
numtracer/include/numtracer/core/: axplan.hpp  cmat.hpp  config.hpp  cx.hpp
numtracer/include/numtracer/cuda/: integrator.cuh
numtracer/include/numtracer/dense/: dtensor.hpp
numtracer/include/numtracer/dirac/: dense_trace.hpp  dirac_data.hpp
numtracer/include/numtracer/expr/: cse.hpp  expr.hpp  real_cse.hpp
numtracer/include/numtracer/network/: dirac.hpp  network.hpp  sun_net.hpp
numtracer/include/numtracer/numeric/: dpoly.hpp  mpoly.hpp  numeric_contract.hpp  numeric_driver.hpp  spinor_mat.hpp
numtracer/include/numtracer/sun/: sun_data.hpp
numtracer/mathematica/: Codegen.m  DSL.m  DiFfRG_compat.m  Frames.m  FunKitAdapter.m  NumTracer.m  NumTracerPaths.m  PacletInfo.m
numtracer/tests/: compare_discdirac_num.cpp  compare_ftproj_num.cpp  compare_proj_num.cpp  proto_matprod.cpp  qcd147_setup.m  qcd_setup.m  sun_contract.cpp  test_col_numeric.cpp  test_dense_pack.cpp  test_dpoly.cpp  test_finiteT_quark.cpp  test_numeric_contract.cpp  test_projector_fusion.cpp  test_projector_identity.cpp  ym_setup.m
numtracer/tests/gpu/: README.md  integrate_za3_gpu.cu  integrate_za3_kokkos.cpp  integrate_za4_gpu.cu  integrate_za4_kokkos.cpp  integrator_kokkos.hpp  quadrature.hpp  ref.hpp  ref_za3.cpp  ref_za4.cpp  shim.hpp
numtracer/tests/refshim/: YM_ZA3_kernel.hh  YM_ZA4_kernel.hh  YM_ZA_kernel.hh  YM_Zc_kernel.hh  ZA3_147_kernel.hh  ZA3_kernel.hh  ZA4_kernel.hh  ZA_kernel.hh  ZAqbq1_147_kernel.hh  ZAqbq1_kernel.hh  ZAqbq4_147_kernel.hh  ZAqbq7_147_kernel.hh  Zq_kernel.hh  bench_147.cpp  bench_aqbq147.cpp  bench_za3_147_dense.cpp  bench_za_dense.cpp  compare_aqbq147.cpp  compare_flavour_ingroup.cpp  compare_flavour_split.cpp  compare_glu_quark.cpp  compare_gluon_condensate.cpp  compare_pion_quark.cpp  compare_sigl_dirac.cpp  compare_za3_147_form.cpp  compare_za3_147_num.cpp  compare_za3_num.cpp  compare_za4_147_num.cpp  compare_za4_num.cpp  compare_za_num.cpp  compare_zacbc_num.cpp  compare_zaqbq1.cpp  compare_zq_collect.cpp  compare_zq_num.cpp  shim.hpp
